@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.5 2004/01/13 18:59:35 jdolecek Exp $
+# $NetBSD: Makefile,v 1.6 2004/01/13 19:44:59 jdolecek Exp $
 
 MODNAME=		ftp
 CATEGORIES+=		net
-PKGREVISION=		1
+PKGREVISION=		2
 COMMENT=		PHP4 extension for FTP access
 
 USE_BUILDLINK2=		YES
@@ -12,4 +12,9 @@ DISTINFO_FILE=		${.CURDIR}/distinfo
 
 CONFIGURE_ARGS+=	--enable-${MODNAME}
 
+# adjust so that the pkg gets built with SSL support
+LIBS+=			-lssl -lcrypto
+CFLAGS+=		-DHAVE_OPENSSL_EXT
+
+.include "../../security/openssl/buildlink2.mk"
 .include "../../mk/bsd.pkg.mk"
